--- a/WebContent/css2/styles.css
+++ b/WebContent/css2/styles.css
@@ -1,18 +1,16 @@
-﻿
-/*  Other styles for making things look pretty ==================== */
+﻿/*  Other styles for making things look pretty ==================== */
 
 /* Fonts
 font-family: 'Roboto Condensed', sans-serif;
 font-family: 'Roboto', sans-serif;
 */
-
 figure, body {
-    margin: 0;
-    padding: 0;
-    line-height: 1.4;
-
+	margin: 0;
+	padding: 0;
+	line-height: 1.4;
 }
+
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #eee;
+	font-family: 'Roboto', sans-serif;
+	background-color: #eee;
 }
